<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/name"
        android:textSize="20sp"
        android:layout_width="121dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/icon"
        android:text="@string/imi" />

    <TextView
        android:id="@+id/surname"
        android:textSize="20sp"
        android:layout_width="121dp"
        android:layout_height="34dp"
        android:layout_below="@+id/name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/icon"
        android:text="@string/nazwis" />

    <TextView
        android:id="@+id/debt"

        android:textSize="20sp"
        android:layout_width="121dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/name"
        android:text="@string/d_ug" />

    <TextView
        android:id="@+id/amount"
        android:textSize="20sp"
        android:layout_width="121dp"
        android:layout_height="34dp"
        android:layout_below="@+id/debt"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/surname"
        android:text="@string/_100" />

</RelativeLayout>